--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,98 @@
+altair==5.5.0
+annotated-types==0.7.0
+attrs==25.3.0
+bcrypt==4.3.0
 blinker==1.9.0
-click==8.2.1
+CacheControl==0.14.3
+cachetools==5.5.2
+captcha==0.7.1
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.7
+colorama==0.4.6
+contourpy==1.2.1
+cryptography==45.0.3
+cycler==0.12.1
+extra-streamlit-components==0.1.80
+firebase-admin==6.8.0
 Flask==3.1.1
-fpdf==1.7.2
+flask-cors==6.0.1
+fonttools==4.53.1
+gcloud==0.18.3
+gitdb==4.0.12
+GitPython==3.1.44
+google-ai-generativelanguage==0.6.15
+google-api-core==2.24.2
+google-api-python-client==2.166.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.3
+google-cloud-firestore==2.21.0
+google-cloud-storage==3.1.0
+google-crc32c==1.7.1
+google-generativeai==0.8.4
+google-resumable-media==2.7.2
+googleapis-common-protos==1.69.2
+grpcio==1.71.0
+grpcio-status==1.71.0
+httplib2==0.22.0
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jwcrypto==1.5.6
+kiwisolver==1.4.5
 MarkupSafe==3.0.2
+matplotlib==3.9.2
+msgpack==1.1.0
+mysql-connector-python==8.2.0
+narwhals==1.33.0
+nltk==3.8.1
+numpy==2.1.0
+oauth2client==4.1.3
+packaging==24.1
+pandas==2.2.3
+pillow==10.4.0
+proto-plus==1.26.1
+protobuf==5.29.4
+pyarrow==19.0.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
+pycryptodome==3.23.0
+pydantic==2.11.2
+pydantic_core==2.33.1
+pydeck==0.9.1
+PyJWT==2.10.1
+pyparsing==3.1.2
+Pyrebase4==4.8.0
+python-dateutil==2.9.0.post0
+python-jwt==4.1.0
+pytz==2025.2
+PyYAML==6.0.2
+referencing==0.36.2
+regex==2024.7.24
+requests==2.32.3
+requests-toolbelt==0.10.1
+rpds-py==0.24.0
+rsa==4.9
+six==1.16.0
+smmap==5.0.2
+streamlit==1.44.1
+streamlit-authenticator==0.4.2
+tenacity==9.1.2
+termcolor==2.5.0
+toml==0.10.2
+tornado==6.4.2
+tqdm==4.66.5
+typing-inspection==0.4.0
+typing_extensions==4.13.1
+tzdata==2025.2
+uritemplate==4.1.1
+urllib3==1.26.20
+vboxapi==1.0
+watchdog==6.0.0
 Werkzeug==3.1.3
-gunicorn==21.2.0
